2009-02-12  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/annotations/XYTextAnnotation.java
    (backgroundPaint): New field,
    (outlineVisible): Likewise,
    (outlinePaint): Likewise,
    (outlineStroke): Likewise,
    (XYTextAnnotation): Initialise new fields,
    (getBackgroundPaint): New method,
    (setBackgroundPaint): Likewise,
    (getOutlinePaint): Likewise,
    (setOutlinePaint): Likewise,
    (getOutlineStroke): Likewise,
    (setOutlineStroke): Likewise,
    (isOutlineVisible): Likewuse,
    (setOutlineVisible): Likewise,
    (draw): Draw background and outline,
    (equals): Check new fields,
    (writeObject): Handle new fields,
    (readObject): Likewise.

2009-02-12  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/data/general/DatasetUtilities.java
    (sampleFunction2D): Delegate to new method,
    (sampleFunction2DToSeries): New method,
    * source/org/jfree/data/function/NormalDistributionFunction2D.java
    (factor): New field,
    (denominator): Likewise,
    (NormalDistributionFunction2D): Initialise new fields,
    (getValue): Use precomputed constants.

2009-02-10  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/block/LabelBlock.java
    (contentAlignmentPoint): New field,
    (textAnchor): Likewise,
    (LabelBlock): Initialise new fields,
    (getContentAlignmentPoint): New method,
    (setContentAlignmentPoint): Likewise,
    (getTextAnchor): Likewise,
    (setTextAnchor): Likewise,
    (equals): Check new fields.

2009-02-05  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/renderer/xy/XYBarRenderer.java
    (barAlignmentFactor): New field,
    (XYBarRenderer): Initialise new field,
    (getBarAlignmentFactor): New method,
    (setBarAlignmentFactor): Likewise,
    (drawItem): Shift bar if alignment factor is set,
    (equals): Check new field.

2009-02-05  David Gilbert  <david.gilbert@object-refinery.com>
