@@ -1,5 +1,11 @@
 2009-02-12  David Gilbert  <david.gilbert@object-refinery.com>
 
+    * source/org/jfree/chart/annotations/XYPointerAnnotation.java
+    (draw): Added support for rotated text, plus background paint and
+    outline paint/stroke.
+
+2009-02-12  David Gilbert  <david.gilbert@object-refinery.com>
+
     * source/org/jfree/chart/annotations/XYTextAnnotation.java
     (backgroundPaint): New field,
     (outlineVisible): Likewise,
